tests/expectations/compiler/finalize/finalize_fail.out
Error [EAST0372017]: The name `finalize_no_params` is defined multiple times.
    --> compiler-test:25:16
     |
  12 |       async transition finalize_no_params() -> Future {
     |                        ^^^^^^^^^^^^^^^^^^ previous definition of `finalize_no_params` here
   ...
  25 |   async function finalize_no_params() {
     |                  ^^^^^^^^^^^^^^^^^^ `finalize_no_params` redefined here
